Subscribers - API Test
no issue
- added API tests
- cleanup to pass linting

--- a/core/server/translations/en.json
+++ b/core/server/translations/en.json
@@ -333,6 +333,9 @@
             "tags": {
                 "tagNotFound": "Tag not found."
             },
+            "subscriber": {
+                "subscriberNotFound": "Subscriber not found."
+            },
             "themes": {
                 "noPermissionToBrowseThemes": "You do not have permission to browse themes.",
                 "noPermissionToEditThemes": "You do not have permission to edit themes.",
