Move router & helper behind labs flag
- replaces the router & helper with a dynamic function that detects whether the feature is enabled in labs
- this ensures no restart is needed to enable/disable the functionality
- helpers thing probably needs to move to be part of the labs utils

--- a/core/server/translations/en.json
+++ b/core/server/translations/en.json
@@ -450,6 +450,9 @@
             "unableToSendEmail": "Ghost is currently unable to send email."
         },
         "helpers": {
+            "helperNotAvailable": "The \\{\\{{helperName}\\}\\} helper is not available.",
+            "apiMustBeEnabled": "The {flagName} labs flag must be enabled if you wish to use the \\{\\{{helperName}\\}\\} helper.",
+            "seeLink": "See {url}",
             "foreach": {
                 "iteratorNeeded": "Need to pass an iterator to #foreach"
             },
